Commit july 4, 01:42 AM

--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/i18n/en.yaml
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/i18n/en.yaml
@@ -96,7 +96,7 @@
 # About widget
 
 - id: interests
-  translation: Interests
+  translation: Intereses
 
 - id: education
   translation: Education
@@ -154,7 +154,7 @@
   translation: Abstract
 
 - id: publication
-  translation: Publication
+  translation: Publicaciones
 
 - id: publication_type
   translation: Type
