--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/i18n/en.yaml
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/i18n/en.yaml
@@ -99,7 +99,7 @@
   translation: Intereses
 
 - id: education
-  translation: Education
+  translation: Educación
 
 - id: user_profile_latest
   translation: Latest
