--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/i18n/en.yaml
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/i18n/en.yaml
@@ -96,10 +96,10 @@
 # About widget
 
 - id: interests
-  translation: Intereses
+  translation: Interests
 
 - id: education
-  translation: Educación
+  translation: Education
 
 - id: user_profile_latest
   translation: Latest
